# cargo-junit-test

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cases.rs  junit.rs  main.rs
